
2005/04/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a memory leak in typemaker generated code (spotted by Andreas Degert)


2005/03/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in WaitCallback (type mismatch)


2005-03-29   Christian Stimming <stimming@tuhh.de>

	* src/base/plugin.h: Add PluginManager_AddPathFromWinReg() which
	reads a path from the windows registry.

	* src/crypt/crypt.c: Add function GWEN_Random() which uses an
	internal RNG state. This was, the application's RNG state is left
	untouched.

	* configure.ac, src/crypt/padd.c, crypt.c: If random()/srandom()
	is not available, use rand()/srand(). Necessary for
	e.g. windows/mingw32.


===========================================================================
MARK: released gwenhywfar-1.10.0 (2005/03/28)

Please note: The CryptToken framework in src/crypt2/ is not considered part
of the API yet, so changes there will not change the SO version !
Please do not use the stuff from src/crypts2 until the next release.
===========================================================================


2005/03/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- typemaker: function for stringlists "*_Has*" now expects a const rather
  than a non-const pointer as first argument


2005/03/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added option "--header" to tool xmlmerge. With this given the resulting
  file will contain some XML headers (like ?xml)


2005/03/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added environment variable "GWEN_SSL_DEBUG"
- reworked parts of GWEN_NetConnectionHTTP, GWEN_NetConnection and 
  GWEN_NetTransportSSL. This should work now with more banks.


2005/03/25: Martin Preuss<martin@libchipcard.de>